--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,54 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
+  fonts:
+    - family: IBM_Plex_Sans
+      fonts:
+          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Regular.ttf
+          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Bold.ttf
+            weight: 700
+          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Italic.ttf
+            style: italic
+          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-BoldItalic.ttf
+            weight: 700
+            style: italic
+          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Thin.ttf
+            weight: 100
+          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-ThinItalic.ttf
+            weight: 100
+            style: italic
+          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Light.ttf
+            weight: 300
+    - family: Raleway
+      fonts:
+        - asset: fonts/Raleway/Raleway-BlackItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-Black.ttf
+        - asset: fonts/Raleway/Raleway-BoldItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-Bold.ttf
+        - asset: fonts/Raleway/Raleway-ExtraBoldItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-ExtraBold.ttf
+        - asset: fonts/Raleway/Raleway-ExtraLightItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-ExtraLight.ttf
+        - asset: fonts/Raleway/Raleway-Italic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-LightItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-Light.ttf
+        - asset: fonts/Raleway/Raleway-MediumItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-Medium.ttf
+        - asset: fonts/Raleway/Raleway-Regular.ttf
+        - asset: fonts/Raleway/Raleway-SemiBoldItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-SemiBold.ttf
+        - asset: fonts/Raleway/Raleway-ThinItalic.ttf
+          style: italic
+        - asset: fonts/Raleway/Raleway-Thin.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
