--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,50 +78,20 @@ flutter:
   fonts:
     - family: IBM_Plex_Sans
       fonts:
-          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Regular.ttf
-          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Bold.ttf
+          - asset: fonts/IBMPlexSans-Bold.ttf
             weight: 700
-          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Italic.ttf
-            style: italic
-          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-BoldItalic.ttf
-            weight: 700
-            style: italic
-          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Thin.ttf
-            weight: 100
-          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-ThinItalic.ttf
-            weight: 100
-            style: italic
-          - asset: fonts/IBM_Plex_Sans/IBMPlexSans-Light.ttf
-            weight: 300
     - family: Raleway
       fonts:
-        - asset: fonts/Raleway/Raleway-BlackItalic.ttf
+        - asset: fonts/Raleway-Light.ttf
+        - asset: fonts/Raleway-LightItalic.ttf
           style: italic
-        - asset: fonts/Raleway/Raleway-Black.ttf
-        - asset: fonts/Raleway/Raleway-BoldItalic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-Bold.ttf
-        - asset: fonts/Raleway/Raleway-ExtraBoldItalic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-ExtraBold.ttf
-        - asset: fonts/Raleway/Raleway-ExtraLightItalic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-ExtraLight.ttf
-        - asset: fonts/Raleway/Raleway-Italic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-LightItalic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-Light.ttf
-        - asset: fonts/Raleway/Raleway-MediumItalic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-Medium.ttf
-        - asset: fonts/Raleway/Raleway-Regular.ttf
-        - asset: fonts/Raleway/Raleway-SemiBoldItalic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-SemiBold.ttf
-        - asset: fonts/Raleway/Raleway-ThinItalic.ttf
-          style: italic
-        - asset: fonts/Raleway/Raleway-Thin.ttf
+
+        - asset: fonts/Raleway-Medium.ttf
+        - asset: fonts/Raleway-Regular.ttf
+          weight: 200
+        - asset: fonts/Raleway-ExtraBold.ttf
+          weight: 900
+
   # fonts:
   #   - family: Schyler
   #     fonts:
